Add Login activity and layout

--- a/app/src/main/res/xml/activity_settings.xml
+++ b/app/src/main/res/xml/activity_settings.xml
@@ -56,5 +56,18 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="Account settings">
+
+        <Preference android:title="Sign out"
+            android:key="signOutSelection"
+            android:summary="Currently signed in as "/>
+
+        <Preference android:title="Delete account"
+            android:key="deleteAccountSelection"
+            android:summary="Permanently delete account"/>
+
+    </PreferenceCategory>
+
 
 </PreferenceScreen>
