--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,14 @@
     android:gravity="center"
     android:background="#FFF">
 
+    <ImageView
+        android:id="@+id/splashImageId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/activity_vertical_margin_bigger"
+        android:src="@drawable/splashratemydriving" />
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_height="wrap_content"
@@ -15,8 +23,8 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:layout_marginTop="10dp"
-            android:hint="E-mail"
-            android:id="@+id/girisEmail" />
+            android:hint="@string/loginActivity_emailText"
+            android:id="@+id/login_emailField" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -31,8 +39,8 @@
             android:inputType="textPassword"
             android:ems="10"
             android:layout_marginTop="10dp"
-            android:id="@+id/girisParola"
-            android:hint="Password" />
+            android:id="@+id/login_passwordField"
+            android:hint="@string/loginActivity_passwordText" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -42,33 +50,33 @@
         android:orientation="horizontal"
         android:gravity="center">
         <Button
-            android:text="Login"
-            android:id="@+id/girisButton"
+            android:text="@string/loginActivity_loginButton"
+            android:id="@+id/login_loginButton"
             android:layout_width="140dp"
             android:layout_height="45dp"
-            android:textColor="#FFFF"
+            android:textColor="@color/white"
             android:textAllCaps="true"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:background="@color/colorAccent"/>
+            android:background="@color/colorPrimary"/>
 
         <Button
-            android:text="Register!"
-            android:id="@+id/uyeOlButton"
+            android:text="@string/loginActivity_registerButton"
+            android:id="@+id/login_registerButton"
             android:layout_width="140dp"
             android:layout_height="45dp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
-            android:textColor="#FFFF"
-            android:background="@color/colorAccent"/>
+            android:textColor="@color/white"
+            android:background="@color/colorPrimary"/>
     </LinearLayout>
 
     <Button
-        android:text="I forgot password"
+        android:text="@string/login_forgotPassword"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
-        android:id="@+id/yeniSifreButton"
+        android:id="@+id/login_forgotPasswordButton"
         android:background="@null"
         android:textColor="@color/colorPrimary"
         android:layout_marginBottom="8dp"
@@ -77,12 +85,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="OR"
+        android:text="@string/login_or"
         android:gravity="center"
         android:textColor="@color/colorPrimary"/>
 
     <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
+        android:id="@+id/login_googleSignInButton"
         android:layout_width="300dp"
         android:layout_height="55dp"
         android:layout_marginTop="15dp"
