--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="red">#ff0000</color>
     <color name="lightGreen">#00ff00</color>
     <color name="transparentGray">#6ac6c6c6</color>
+    <color name="gray">#4B4B4B</color>
     <color name="darkGreen">#1d6c49</color>
     <color name="paleGreen">#a9ffcd</color>
     <color name="goodColor">#04ca6e</color>
