--- a/app/src/main/res/layout/activity_driving.xml
+++ b/app/src/main/res/layout/activity_driving.xml
@@ -31,6 +31,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/activity_vertical_margin"
                 android:format24Hour="HH:mm:ss     EEE, dd.MM.yyyy"
+                android:format12Hour="h:mm:ss a     EEE, dd.MM.yyyy"
                 android:gravity="center_vertical"
                 android:text=""
                 android:textColor="@color/red"
@@ -258,15 +259,15 @@
             android:textAlignment="center"
             android:visibility="invisible">
 
-        <TextView
-            android:id="@+id/drivingExtraDisplayAverageRatingNoInternetText"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:gravity="center_vertical"
-            android:text="@string/drivingActivity_noInternetConnection"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+            <TextView
+                android:id="@+id/drivingExtraDisplayAverageRatingNoInternetText"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:gravity="center_vertical"
+                android:text="@string/drivingActivity_noInternetConnection"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
